<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GeoKewpie</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_about">About</string>
    <string name="register_form">Register</string>
    <string name="registration.username">Username</string>
    <string name="registration.email">Email</string>
    <string name="registration.password">Password</string>
    <string name="registration.register">Register New Account</string>
    <string name="login_form">Login</string>
    <string name="menu_refresh">Refresh</string>
    <string name="add_kewpie">Add Kewpie</string>
    <string name="send_request">Send Request</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_to_geokewpie">New to GeoKewpie? Register here</string>
    <string name="email">Email</string>
    <string name="register_new_acc">Register New Account</string>
    <string name="already_has_acc">Already has account! Login here</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="ago">ago</string>
    <string name="marker_of_me">Me</string>
    <string name="request_sent">Request sent</string>
    <string name="retry_later">Please retry later</string>
    <string name="network_not_available">Network is not available</string>
    <string name="location_not_available">Location is not available</string>
    <string name="now">now</string>
    <string name="device_is_not_supported">This device is not supported</string>
    <string name="no_valid_gps_apk_found">No valid Google Play Services APK found</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_search">Search</string>
    <string name="locations_to_be_updated">Locations of your kewpies to be updated in a moment</string>
    <string name="something_happend">Oh, crap! Something bad happened. Please retry.</string>
    <string name="loading">Loading…</string>
    <string name="you_are_following">You\'re following…</string>
    <string name="no_active_followings">…nobody. Add some!</string>
    <string name="followers">Followers</string>
    <string name="search_hint">nickname</string>
    <string name="nobody_found">Nobody found</string>
    <string name="plus">+</string>
    <string name="accept">accept</string>
    <string name="cross">x</string>
    <string name="delete">delete</string>
    <string name="decline">decline</string>
    <string name="add">add</string>
    <string name="invisible">Invisible</string>
</resources>
