<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:paddingTop="5dip"
                      android:paddingBottom="5dip"
                      android:orientation="vertical">
            <!-- Logo Start-->
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
                      android:layout_width="fill_parent"
                      android:layout_height="90dip"
                      android:layout_alignParentBottom="true"
                      android:orientation="vertical">
        </LinearLayout>
        <!-- Footer Ends -->

        <!-- Login Form -->
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_below="@+id/header"
                android:layout_alignParentStart="true"
                android:layout_marginTop="102dp">
            <!--  User Label -->
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#372c24"
                      android:text="@string/user"/>
            <EditText android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dip"
                      android:layout_marginBottom="20dip"
                      android:textColor="#372c24"
                      android:singleLine="true"/>
            <!--  Password Label -->
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#372c24"
                      android:text="@string/password"/>
            <EditText android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dip"
                      android:textColor="#372c24"
                      android:singleLine="true"
                      android:inputType="textPassword"/>
            <!-- Login button -->
            <Button android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/login"
                    android:onClick="login"/>
            <!-- Link to Registration Screen -->
            <TextView android:id="@+id/link_to_register"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="40dip"
                      android:layout_marginBottom="40dip"
                      android:text="@string/new_to_geokewpie"
                      android:gravity="center"
                      android:textSize="20sp"
                      android:textColor="#0b84aa"/>

        </LinearLayout>
        <!-- Login Form Ends -->
    </RelativeLayout>
</ScrollView>