<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:background="#fff">

        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:paddingTop="5dip"
                      android:paddingBottom="5dip"
                      android:orientation="vertical">
            <!-- Logo Start-->
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
                      android:layout_width="fill_parent"
                      android:layout_height="90dip"
                      android:layout_alignParentBottom="true"
                      android:orientation="vertical">
        </LinearLayout>
        <!-- Footer Ends -->

        <!-- Registration Form -->
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_below="@+id/header"
                android:layout_alignParentStart="true"
                android:layout_marginTop="102dp">
            <!-- User Label -->
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#372c24"
                      android:text="User"/>
            <EditText android:id="@+id/reg_user"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dip"
                      android:textColor="#372c24"
                      android:singleLine="true"
                      android:layout_marginBottom="20dip"/>
            <!--  Email Label -->
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#372c24"
                      android:text="@string/email"/>
            <EditText android:id="@+id/reg_email"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dip"
                      android:textColor="#372c24"
                      android:singleLine="true"
                      android:layout_marginBottom="20dip"
                      android:inputType="textEmailAddress"/>
            <!-- Password Label -->
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#372c24"
                      android:text="@string/password"/>
            <EditText android:id="@+id/reg_password"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:textColor="#372c24"
                      android:singleLine="true"
                      android:layout_marginTop="5dip"/>
            <!-- Register Button -->
            <Button android:id="@+id/btnRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/register_new_acc"
                    android:onClick="register"/>
            <!-- Link to Login Screen -->
            <TextView android:id="@+id/link_to_login"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="40dip"
                      android:layout_marginBottom="40dip"
                      android:text="@string/already_has_acc"
                      android:gravity="center"
                      android:textSize="20sp"
                      android:textColor="#025f7c"/>

        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>
</ScrollView>