<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- The main content view -->
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <include layout="@layout/toolbar"/>
        <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.google.android.gms.maps.MapFragment"
                tools:layout="@layout/main"/>
    </LinearLayout>
    <!-- The navigation drawer -->

    <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_gravity="start">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="35sp"
                      android:layout_marginStart="16sp"
                      android:layout_marginLeft="16sp"
                      android:id="@+id/hide_switch_layout"
                      android:orientation="horizontal">
            <Switch
                    android:id="@+id/hide_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="Invisible On"
                    android:textOff="Invisible Off"
                    android:layout_gravity="center_vertical"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginLeft="16sp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/invisible"
                    android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <!--  divider -->
        <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginBottom="1dp"
                android:background="#DADADC"
                android:id="@+id/hide_divider"
                android:layout_below="@+id/hide_switch_layout"/>

        <ListView android:id="@+id/left_drawer"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:choiceMode="singleChoice"
                  android:divider="@android:color/transparent"
                  android:dividerHeight="0dp"
                  android:layout_below="@+id/hide_divider"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/add_kewpie_layout"
                          android:layout_width="match_parent"
                          android:layout_height="44sp"
                          android:gravity="center_vertical"
                          android:clickable="true">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:layout_marginLeft="16sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginRight="20sp"
                        android:src="@drawable/ic_action_add_person"/>
                <!-- title -->
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/add_kewpie"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/followers_layout"
                          android:layout_width="match_parent"
                          android:layout_height="44sp"
                          android:gravity="center_vertical"
                          android:layout_below="@+id/add_kewpie_layout">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:layout_marginLeft="16sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginRight="20sp"
                        android:src="@drawable/ic_action_group"/>
                <!-- title -->
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/followers"/>
            </LinearLayout>

            <!--
                        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                      android:id="@+id/settings_layout"
                                      android:layout_width="match_parent"
                                      android:layout_height="44sp"
                                      android:gravity="center_vertical"
                                      android:layout_below="@+id/followers_layout">
                            <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16sp"
                                    android:layout_marginLeft="16sp"
                                    android:layout_marginEnd="20sp"
                                    android:layout_marginRight="20sp"
                                    android:src="@drawable/ic_action_settings"/>
                            &lt;!&ndash; title &ndash;&gt;
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    android:text="@string/settings"/>
                        </LinearLayout>
            -->

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/faq_layout"
                          android:layout_width="match_parent"
                          android:layout_height="44sp"
                          android:gravity="center_vertical"
                          android:layout_below="@+id/followers_layout">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:layout_marginLeft="16sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginRight="20sp"
                        android:src="@drawable/ic_action_help"/>
                <!-- title -->
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/faq"/>
            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>